--- a/source/plugin/company_manage/template/touch/f_zhiya_detail.htm
+++ b/source/plugin/company_manage/template/touch/f_zhiya_detail.htm
@@ -83,15 +83,15 @@
             </tr>
             <tr>
                 <th>质押起始时间</th>
-                <td><!--{if !empty($zhiya_data)}-->{$zhiya_data['start_date']}<!--{/if}--></td>
+                <td><!--{if !empty($zhiya_data)&&$zhiya_data['start_date'] !='0000-00-00'}-->{$zhiya_data['start_date']}<!--{/if}--></td>
             </tr>
             <tr>
                 <th>质押截止日期</th>
-                <td><!--{if !empty($zhiya_data)}-->{$zhiya_data['end_date']}<!--{/if}--></td>
+                <td><!--{if !empty($zhiya_data)&&$zhiya_data['end_date'] !='0000-00-00'}-->{$zhiya_data['end_date']}<!--{/if}--></td>
             </tr>
             <tr>
                 <th>解押日期</th>
-                <td><!--{if !empty($zhiya_data)}-->{$zhiya_data['dis_date']}<!--{/if}--></td>
+                <td><!--{if !empty($zhiya_data)&&$zhiya_data['dis_date'] !='0000-00-00'}-->{$zhiya_data['dis_date']}<!--{/if}--></td>
             </tr>
             <tr>
                 <th>相关说明</th>
